// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FLPButton > should not call onClick when clicked and isDisabled is true 1`] = `
<body>
  <div>
    <button
      class="chakra-button css-4xx2wk"
      data-disabled=""
      disabled=""
      type="button"
    >
      FLPButton
    </button>
  </div>
</body>
`;

exports[`FLPButton > should render correctly 1`] = `
<div>
  <button
    class="chakra-button css-4xx2wk"
    type="button"
  >
    FLPButton
  </button>
</div>
`;

exports[`FLPButton > should render correctly with props 1`] = `
<div>
  <button
    class="chakra-button css-4xx2wk"
    data-disabled=""
    data-loading=""
    disabled=""
    type="button"
  >
    <div
      class="chakra-button__spinner chakra-button__spinner--start css-1vsp78f"
    >
      <div
        class="chakra-spinner css-1plzyg6"
      >
        <span
          class="css-8b45rq"
        >
          Loading...
        </span>
      </div>
    </div>
    <span
      class="css-q7lffx"
    >
      FLPButton
    </span>
  </button>
</div>
`;
